# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: download.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
